k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ushadow
  labels:
    name: ushadow
    env: purple
