k8s/gai-conf-fix.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: gai-conf-fix
  namespace: kube-system
spec:
  selector:
    matchLabels:
      name: gai-conf-fix
  template:
    metadata:
      labels:
        name: gai-conf-fix
    spec:
      hostNetwork: true
      hostPID: true
      containers:
      - name: pause
        image: gcr.io/google_containers/pause:3.1
      volumes:
      - name: host-etc
        hostPath:
          path: /etc
          type: Directory
