k8s/webui-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: webui
  name: ushadow-frontend
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    io.kompose.service: webui
